# OS_Colloquium_First

./: CMakeLists.txt  README.md  theory.txt
dupl_erase/: CMakeLists.txt  dupl_erase.cpp  dupl_erase.h  dupl_erase_main.cpp  dupl_erase_tests.cpp
factorial/: CMakeLists.txt  factorial.cpp  factorial.h  factorial_main.cpp  factorial_tests.cpp
list_reverse/: CMakeLists.txt  list_reverse.h  list_reverse_main.cpp  list_reverse_tests.cpp
utils/: CMakeLists.txt  utils.h
